8240976: [JVMCI] MethodProfileWidth flag is broken

Remove JVMCI code which is not used

Reviewed-by: thartmann, redestad